@@ -317,7 +317,7 @@
       <label>184</label>
       <onleft>4</onleft>
       <onright>4</onright>
-      <onup>8</onup>
+      <onup>9</onup>
       <ondown>10</ondown>
     </control>
 
